bee death when breeding